`Window` tests